Template description updates

--- a/static/less/bartola.less
+++ b/static/less/bartola.less
@@ -403,6 +403,11 @@ section {
     padding: 15%;
 }
 
+#medicus_pic {
+	height: 600px;
+	padding-left: 12%;
+} 
+
 @media(min-width:767px) {
     #portfolio {
         .portfolio-item {
