--- a/templates/index.html
+++ b/templates/index.html
@@ -73,7 +73,7 @@
                 <!-- </div> -->
                 <!-- <div class="col-md-8"> -->
                     <div class="about-bio">
-                        <p id="mybio">My name is Jesse Bartola and I am currently an undergraduate student studying Computer Science at the <a href="http://www.umass.edu/">University of Massachusetts, Amherst</a>. Planning on graduating in 2019, I would like to become a software engineer. My passion for technology began at a young age and has continued to expand ever since. I have developed several web and mobile interfaces including instant-messaging chat systems, automated texting services and mobile iPhone applications. 
+                        <p id="mybio">My name is Jesse and I am currently an undergraduate student studying Computer Science at the <a href="http://www.umass.edu/">University of Massachusetts, Amherst</a>. I plan on graduating in 2019 with aspirations of becoming a software developer. I have roughly 5 years of programming experience under my belt coupled with a lifelong interest in computers and technology. My work experiences consists of several web and mobile software projects including scalable social networking platforms, automated texting services and mobile iOS applications. In my spare time I enjoy doing puzzles, reading, and learning about new technologies.
                         </p>
                     </div>
                 <!-- </div> -->
@@ -112,7 +112,7 @@
                         <h4 class="service-heading">Technology</h4>
                     </div>
                     <div class="skill-desc">
-                        <p class="text-muted">Technology spans all facets of modern day society. From computers to iPhones and beyond, an aptitude for understanding these devices at a fundamental level is an essential part of being a succesful computer scientist. While always trying to find the most efficient way to tackle my projects, I enjoy the challenge and learning experience that come with pushing myself out of my comfort zone.</p>
+                        <p class="text-muted">Technology spans all facets of modern day society. From computers to iPhones and beyond, an aptitude for understanding these devices at a fundamental level is an essential part of being a succesful computer scientist. While always trying to harness the most recent and efficient technologies to tackle my projects, I enjoy the challenge and learning experience that comes with pushing myself out of my comfort zone.</p>
                     </div>
                 </div>
                 <div id="skill3" class="col-sm-4 skill">
@@ -124,7 +124,7 @@
                         <h4 class="service-heading">Active Engagement</h4>
                     </div>
                     <div class="skill-desc">
-                        <p class="text-muted">Learning a difficult concept or adjusting a previous mentality to new industry standards may seem tedious and daunting. As challenging as it is, the light at the end of the tunnel is enough to spark my drive to get there. While a thorough education in computer science is important, hands-on activities solidify your skill-set which is why I am always involved in multiple outside projects of my own.</p>
+                        <p class="text-muted">Learning a difficult concept or adjusting a previous mentality to new industry standards may seem tedious and daunting. As challenging as it is, the light at the end of the tunnel is enough to spark my drive to get there. The key to understanding is simple- practice! While a thorough education in computer science is important, hands-on activities help to solidify your skill-set which is why I am always involved in multiple outside projects of my own.</p>
                     </div>
                 </div>
             </div>
@@ -197,6 +197,20 @@
                         <p class="text-muted">Party Social Networking</p>
                     </div>
                 </div>
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="#medicusModal" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="static/img/iphone6s_medicus2.png" class="img-responsive" alt="" id="medicus_pic">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4>Medicus</h4>
+                        <p class="text-muted">Skin Condition Identification</p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -216,12 +230,12 @@
                 <div id="pieChart" class="chart">
                 </div>
                 <div id="piediv">
-                    <p id="pietext" class="large text-muted">An understanding of many different languages has helped me throughout the years in creating projects with different applications and uses. </p>
-                    <p id="web" style="display:none;" class="large text-muted">Web development is my most proficient area of programming which includes anything from jQuery to Sass. This type of programming is truly the specific area of computer science that I am most passionate about. </p>
-                    <p id="python" style="display:none;" class="large text-muted">My experience with the language of Python has enabled me to create many websites and applications using Flask framework as well as standalone scripts to do my bidding. It is a loosely-typed language with a clear, unobstructed syntax which makes it easy to write robust, scalable application scripts.</p>
-                    <p id="java" style="display:none;" class="large text-muted">Java was one of the first programming languages I ever learned. Although not my favorite, my ability to work in Java has enabled me to create a fair share of algorithmic programming and desktop applications.</p>
-                    <p id="scala" style="display:none;" class="large text-muted">The introduction to functional programming with Scala has allowed me to explore the in-depth capabilities that programming really has to offer to the world.</p>
-                    <p id="swift" style="display:none;" class="large text-muted">iPhone application devlopment is at the forefront of today's society. With this in mind, I have made sure to include this specific type of widely coveted skill in my aresenal. </p>
+                    <p id="pietext" class="large text-muted">An understanding of different languages and their applications has helped me throughout the years in creating projects with various objectives in mind. </p>
+                    <p id="web" style="display:none;" class="large text-muted">Web development is my personal favorite area of software development. After working with numerous frameworks such as Flask, Node.js, Spring MVC and .NET I can really appreciate the versatility that web programming has to offer. This type of programming is truly the specific area of computer science that I am most passionate about. </p>
+                    <p id="python" style="display:none;" class="large text-muted">Python is a fun little language I've used to create many websites and applications using the Flask framework as well as standalone scripts to do my bidding. It is loosely-typed with an unobtrusive syntax making it easy to write robust, scalable application scripts.</p>
+                    <p id="java" style="display:none;" class="large text-muted">Java was one of the first programming languages I ever learned. Although not my favorite, Java laid the groundwork for the comprehension of fundamental programming methodolgies I encounter on a regular basis. My exposure to Java has enabled me to create a fair share of algorithmic and desktop applications. </p>
+                    <p id="scala" style="display:none;" class="large text-muted">Functional programming has gained increasing popularity over the past few years due to its brevity and natural accommodation for concurrency. An introduction this paradigm shed light on some of the amazing capabilities of modern day computation. </p>
+                    <p id="swift" style="display:none;" class="large text-muted">iOS development is at the cornerstone of today's mobile software industry. Knowledge of how to create user-friendly iPhone applications paves the way for state of the art innovation in the years to come. With this in mind, I have made sure to include this specific type of development in my knowledge base. </p>
                 </div>
             </div>
             <br/>
@@ -280,7 +294,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <span class="copyright">Copyright &copy; Jesse Bartola 2016</span>
+                    <span class="copyright">Copyright &copy; Jesse Bartola 2017</span>
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
@@ -290,7 +304,7 @@
                         </li>
                         <li><a href="https://www.facebook.com/jbartola"><i class="fa fa-facebook"></i></a>
                         </li>
-                        <li><a href="https://www.linkedin.com/in/jesse-bartola-b56bb5bb"><i class="fa fa-linkedin"></i></a>
+                        <li><a href="https://www.linkedin.com/in/jessebartola"><i class="fa fa-linkedin"></i></a>
                         </li>
                     </ul>
                 </div>
@@ -307,7 +321,7 @@
     </footer>
     
 
-    <!-- Portfolio Modal 1 -->
+    <!-- TxtAdvice Modal -->
     <div class="portfolio-modal modal fade" id="fashionAdviceModal" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
@@ -324,12 +338,12 @@
                             <h2>TxtAdvice (OutFitr)</h2>
                             <p class="item-intro text-muted">Instant fashion advice</p>
                             <img class="img-responsive img-centered" src="static/img/txtadvice.png" alt="">
-                            <p>Ever second-guess yourself after putting on an outfit before heading out the door? Many people do which is why as the lead platform developer of TxtAdvice, a small group of collegues and myself have creating an app to allow users to consult a professional stylist no matter what time of day! Send in a question or a picture and you'll have an answer in no time.</p>
+                            <p>Ever second-guess yourself after putting on an outfit before heading out the door? I know I have! As the lead platform developer of TxtAdvice I worked with a few colleagues of mine to assemble an app to deliver real-time fashion advice to users by connecting them with professional stylists. Send in a question or a picture and you'll have an answer in no time.</p>
                             <p>
                                 <!-- <strong>Want to try it out? </strong> Go ahead down to <a href="http://txtadvice.com/">txtadvice.com</a> and enter your phone number in the box!</p> -->
-                            <ul class="list-inline">
+                            <!-- <ul class="list-inline">
                                 <li>Date: June 2015</li>
-                            </ul>
+                            </ul> -->
                             <button type="button" class="btn btn-xl" data-dismiss="modal">Back <i class="fa fa-arrow-right"></i></button>
                         </div>
                     </div>
@@ -338,7 +352,7 @@
         </div>
     </div>
 
-    <!-- Portfolio Modal 2 -->
+    <!-- Basic Chat Modal -->
     <div class="portfolio-modal modal fade" id="basicChatModal" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
@@ -352,9 +366,9 @@
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
                             <h2>Basic Chat</h2>
-                            <p class="item-intro text-muted">Portable chat messaging</p>
+                            <p class="item-intro text-muted">Portable Instant Messaging</p>
                             <img class="img-responsive img-centered" src="static/img/basicchat.png" alt="">
-                            <p>Basic Chat is a small project which implements both Node.js and MongoDB. It allows the user to send instant messages to contacts that are also logged in. The site also tracks analytics for each user which can be viewed on their profile. Check out the project on <a href="https://github.com/jrbartola/BasicChat">Github</a>! More features to be announced.</p>
+                            <p>Basic Chat functions as a lightweight chat room providing a seamless instant-messaging communication between users similar to Facebook's. The site also tracks analytics for each user which can be viewed on their profile. Check out the project on <a href="https://github.com/jrbartola/BasicChat">Github</a>! More features to be announced.</p>
                             <button type="button" class="btn btn-xl" data-dismiss="modal">Back <i class="fa fa-arrow-right"></i></button>
                         </div>
                     </div>
@@ -363,7 +377,7 @@
         </div>
     </div>
 
-    <!-- Portfolio Modal 3 -->
+    <!-- Scopium Modal -->
     <div class="portfolio-modal modal fade" id="scopiumModal" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
@@ -385,7 +399,7 @@
                             <div class="col-md-6">
                                 <img class="img-responsive img-centered" src="static/img/scopium1.jpg">
                             </div>
-                            <p>Scopium is a project that a couple of friends and I created for Hack Umass. It makes use of little mechanical Arduino sensors which transmit data to an iOS Appplication, helping monitor signs of multiple sclerosis for patients in need. Studies show that patients more aware of their symptoms are more comfortable than patients unaware of sympotoms they may be experiencing. <strong>See more:</strong> <a href="http://devpost.com/software/scopium">Devpost</a>.</p>
+                            <p>Scopium is a project that a couple of friends and I created for Hack UMASS III. It makes use of Arduino microcontrollers which transmit serialized data to an iOS application, helping monitor symptoms of Multiple Sclerosis for patients in need. Studies show that patients aware of the severity of their symptoms live more comfortably than those who are left in the dark. <strong>See more:</strong> <a href="http://devpost.com/software/scopium">Devpost</a>.</p>
                             <button type="button" class="btn btn-xl" data-dismiss="modal">Back <i class="fa fa-arrow-right"></i></button>
                         </div>
                     </div>
@@ -394,7 +408,7 @@
         </div>
     </div>
 
-    <!-- Portfolio Modal 3 -->
+    <!-- Wave Calendar Modal -->
     <div class="portfolio-modal modal fade" id="waveCalendarModal" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
@@ -409,12 +423,43 @@
                         <div class="modal-body">
                             <!-- Project Details Go Here -->
                             <h2>Wave Calendar</h2>
-                            <p class="item-intro text-muted">Party scheduling social network</p>
+                            <p class="item-intro text-muted">Party Scheduling Social Network</p>
                             <div class="col-md-12">
                                 <img class="img-responsive img-centered" src="static/img/wave_calendar.jpg">
                             </div>
                             
-                            <p>If you've ever been bored and wondered what events are going on around your area, you aren't alone. Wave Calendar provides an easy way for people to find out where the parties (waves) are around you! Once you've signed up, you can either search for parties around your area, or create your own. This web application is built with MEAN stack. Check out the project on <a href="https://github.com/jrbartola/WaveCalendar">Github</a>!</p>
+                            <p>If you've ever been bored and wondered what events are going on around your area, you aren't alone. Wave Calendar provides an easy way for users to find out where the parties (waves) are around them! Once signed up you can create your own wave, browse parties in your local area and rate those you've attended. This web application is built with MEAN stack. Check out the project on <a href="https://github.com/jrbartola/WaveCalendar">Github</a>!</p>
+                            <button type="button" class="btn btn-xl" data-dismiss="modal">Back <i class="fa fa-arrow-right"></i></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Medicus Modal -->
+    <div class="portfolio-modal modal fade" id="medicusModal" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <!-- Project Details Go Here -->
+                            <h2>Medicus</h2>
+                            <p class="item-intro text-muted">Skin Condition Diagnostic Application</p>
+                            <div class="col-md-6">
+                                <img class="img-responsive img-centered" src="static/img/medicus_camera.jpg">
+                            </div>
+                            <div class="col-md-6">
+                                <img class="img-responsive img-centered" src="static/img/medicus_diagnosis.jpg">
+                            </div>
+                            <p>Medicus is an iOS application my friends and I developed for Hack UMASS IV. It harnesses image recognition via the Clarifai API to confidently diagnose various skin ailments given a picture of the condition. An efficient diagnostic tool modeled as an iPhone application has the potential to save doctors time as well as mitigate anxiety felt by users by providing them with immediate diagnosis. <strong>See more:</strong> <a href="https://devpost.com/software/medicus">Devpost</a>.</p>
                             <button type="button" class="btn btn-xl" data-dismiss="modal">Back <i class="fa fa-arrow-right"></i></button>
                         </div>
                     </div>
