Medicus picture fix

--- a/templates/index.html
+++ b/templates/index.html
@@ -204,7 +204,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="static/img/iphone6s_medicus2.png" class="img-responsive" alt="" id="medicus_pic">
+                        <img src="static/img/medicus_iphone.png" class="img-responsive" alt="" id="medicus_pic">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Medicus</h4>
@@ -338,7 +338,7 @@
                             <h2>TxtAdvice (OutFitr)</h2>
                             <p class="item-intro text-muted">Instant fashion advice</p>
                             <img class="img-responsive img-centered" src="static/img/txtadvice.png" alt="">
-                            <p>Ever second-guess yourself after putting on an outfit before heading out the door? I know I have! As the lead platform developer of TxtAdvice I worked with a few colleagues of mine to assemble an app to deliver real-time fashion advice to users by connecting them with professional stylists. Send in a question or a picture and you'll have an answer in no time.</p>
+                            <p>Ever second-guess yourself after putting on an outfit before heading out the door? I know I do! As the lead platform developer of TxtAdvice I worked with a few colleagues of mine to assemble an app to deliver real-time fashion advice to users by connecting them with professional stylists. Send in a question or a picture and you'll have a professional opinion in no time.</p>
                             <p>
                                 <!-- <strong>Want to try it out? </strong> Go ahead down to <a href="http://txtadvice.com/">txtadvice.com</a> and enter your phone number in the box!</p> -->
                             <!-- <ul class="list-inline">
