Piechart modifications and project description updates

--- a/templates/index.html
+++ b/templates/index.html
@@ -338,7 +338,7 @@
                             <h2>TxtAdvice (OutFitr)</h2>
                             <p class="item-intro text-muted">Instant fashion advice</p>
                             <img class="img-responsive img-centered" src="static/img/txtadvice.png" alt="">
-                            <p>Ever second-guess yourself after putting on an outfit before heading out the door? I know I do! As the lead platform developer of TxtAdvice I worked with a few colleagues of mine to assemble an app to deliver real-time fashion advice to users by connecting them with professional stylists. Send in a question or a picture and you'll have a professional opinion in no time.</p>
+                            <p>Ever second-guess yourself after putting on an outfit before heading out the door? I know I do! As the lead platform developer of TxtAdvice I worked with a few colleagues of mine to assemble an app aiming to deliver real-time fashion advice to users by connecting them with professional stylists. Send in a question or a picture and you'll have an expert opinion in no time.</p>
                             <p>
                                 <!-- <strong>Want to try it out? </strong> Go ahead down to <a href="http://txtadvice.com/">txtadvice.com</a> and enter your phone number in the box!</p> -->
                             <!-- <ul class="list-inline">
@@ -368,7 +368,7 @@
                             <h2>Basic Chat</h2>
                             <p class="item-intro text-muted">Portable Instant Messaging</p>
                             <img class="img-responsive img-centered" src="static/img/basicchat.png" alt="">
-                            <p>Basic Chat functions as a lightweight chat room providing a seamless instant-messaging communication between users similar to Facebook's. The site also tracks analytics for each user which can be viewed on their profile. Check out the project on <a href="https://github.com/jrbartola/BasicChat">Github</a>! More features to be announced.</p>
+                            <p>Basic Chat functions as a lightweight chat room providing a seamless instant-messaging communication similar to Facebook's. The site also tracks analytics for each user which is available on their profile page. Check out the project on <a href="https://github.com/jrbartola/BasicChat">Github</a>! More features to be announced.</p>
                             <button type="button" class="btn btn-xl" data-dismiss="modal">Back <i class="fa fa-arrow-right"></i></button>
                         </div>
                     </div>
@@ -399,7 +399,7 @@
                             <div class="col-md-6">
                                 <img class="img-responsive img-centered" src="static/img/scopium1.jpg">
                             </div>
-                            <p>Scopium is a project that a couple of friends and I created for Hack UMASS III. It makes use of Arduino microcontrollers which transmit serialized data to an iOS application, helping monitor symptoms of Multiple Sclerosis for patients in need. Studies show that patients aware of the severity of their symptoms live more comfortably than those who are left in the dark. <strong>See more:</strong> <a href="http://devpost.com/software/scopium">Devpost</a>.</p>
+                            <p>Scopium is a project a couple of friends and I created for Hack UMASS III. It makes use of Arduino microcontrollers which transmit serialized data to an iOS application, helping monitor symptoms of Multiple Sclerosis for patients in need. Studies show that MS patients aware of the severity of their symptoms live more comfortably than those who are left in the dark. <strong>See more:</strong> <a href="http://devpost.com/software/scopium">Devpost</a>.</p>
                             <button type="button" class="btn btn-xl" data-dismiss="modal">Back <i class="fa fa-arrow-right"></i></button>
                         </div>
                     </div>
@@ -427,7 +427,6 @@
                             <div class="col-md-12">
                                 <img class="img-responsive img-centered" src="static/img/wave_calendar.jpg">
                             </div>
-                            
                             <p>If you've ever been bored and wondered what events are going on around your area, you aren't alone. Wave Calendar provides an easy way for users to find out where the parties (waves) are around them! Once signed up you can create your own wave, browse parties in your local area and rate those you've attended. This web application is built with MEAN stack. Check out the project on <a href="https://github.com/jrbartola/WaveCalendar">Github</a>!</p>
                             <button type="button" class="btn btn-xl" data-dismiss="modal">Back <i class="fa fa-arrow-right"></i></button>
                         </div>
@@ -459,7 +458,7 @@
                             <div class="col-md-6">
                                 <img class="img-responsive img-centered" src="static/img/medicus_diagnosis.jpg">
                             </div>
-                            <p>Medicus is an iOS application my friends and I developed for Hack UMASS IV. It harnesses image recognition via the Clarifai API to confidently diagnose various skin ailments given a picture of the condition. An efficient diagnostic tool modeled as an iPhone application has the potential to save doctors time as well as mitigate anxiety felt by users by providing them with immediate diagnosis. <strong>See more:</strong> <a href="https://devpost.com/software/medicus">Devpost</a>.</p>
+                            <p>Medicus is an iOS application my friends and I developed for Hack UMASS IV. It harnesses image recognition via the Clarifai API to confidently diagnose various skin ailments given a picture of the condition. An efficient diagnostic tool modeled as an iPhone application has the potential to save doctors time as well as mitigate anxiety felt by users by providing them with immediate, accurate diagnosis. <strong>See more:</strong> <a href="https://devpost.com/software/medicus">Devpost</a>.</p>
                             <button type="button" class="btn btn-xl" data-dismiss="modal">Back <i class="fa fa-arrow-right"></i></button>
                         </div>
                     </div>
