--- a/templates/index.html
+++ b/templates/index.html
@@ -458,7 +458,7 @@
                             <div class="col-md-6">
                                 <img class="img-responsive img-centered" src="static/img/medicus_diagnosis.jpg">
                             </div>
-                            <p>Medicus is an iOS application my friends and I developed for Hack UMASS IV. It harnesses image recognition via the Clarifai API to confidently diagnose various skin ailments given a picture of the condition. An efficient diagnostic tool modeled as an iPhone application has the potential to save doctors time as well as mitigate anxiety felt by users by providing them with immediate, accurate diagnosis. <strong>See more:</strong> <a href="https://devpost.com/software/medicus">Devpost</a>.</p>
+                            <p>Medicus is an iOS application my friends and I developed for Hack UMASS IV. It harnesses image recognition via the Clarifai API to confidently diagnose various skin ailments given a picture of the condition. An efficient diagnostic tool modeled as an iPhone application has the potential to save doctors time as well as mitigate user anxiety by providing them with immediate, accurate diagnosis. <strong>See more:</strong> <a href="https://devpost.com/software/medicus">Devpost</a>.</p>
                             <button type="button" class="btn btn-xl" data-dismiss="modal">Back <i class="fa fa-arrow-right"></i></button>
                         </div>
                     </div>
