Update header background image

--- a/static/less/bartola.less
+++ b/static/less/bartola.less
@@ -158,7 +158,8 @@ h1, h2, h3, h4, h5, h6 {
 
 
 header {
-	background: url('../img/header-bg.jpg') no-repeat center;
+	//background: url('../img/header-bg.jpg') no-repeat center;
+	background: url('../img/binarybackground.jpg') no-repeat center;
 	
 	.background-cover;
 	text-align: center;
@@ -531,6 +532,7 @@ aside.clients {
 section#contact {
 	background-color: @brand-secondary;
 	background-image: url('../img/map-image.png');
+	//background-image: url('../img/binarybackground.jpg');
 	background-position: center;
 	background-repeat: no-repeat;
 	
