--- a/templates/index.html
+++ b/templates/index.html
@@ -399,7 +399,7 @@
                             <div class="col-md-6">
                                 <img class="img-responsive img-centered" src="static/img/scopium1.jpg">
                             </div>
-                            <p>Scopium is a project a couple of friends and I created for Hack UMASS III. It makes use of Arduino microcontrollers which transmit serialized data to an iOS application, helping monitor symptoms of Multiple Sclerosis for patients in need. Studies show that MS patients aware of the severity of their symptoms live more comfortably than those who are left in the dark. <strong>See more:</strong> <a href="http://devpost.com/software/scopium">Devpost</a>.</p>
+                            <p>Scopium is a project some friends and I created for Hack UMASS III. It makes use of Arduino microcontrollers which transmit serialized data to an iOS application, helping monitor symptoms of Multiple Sclerosis for patients in need. Studies show that MS patients aware of the severity of their symptoms live more comfortably than those who are left in the dark. <strong>See more:</strong> <a href="http://devpost.com/software/scopium">Devpost</a>.</p>
                             <button type="button" class="btn btn-xl" data-dismiss="modal">Back <i class="fa fa-arrow-right"></i></button>
                         </div>
                     </div>
@@ -458,7 +458,7 @@
                             <div class="col-md-6">
                                 <img class="img-responsive img-centered" src="static/img/medicus_diagnosis.jpg">
                             </div>
-                            <p>Medicus is an iOS application my friends and I developed for Hack UMASS IV. It harnesses image recognition via the Clarifai API to confidently diagnose various skin ailments given a picture of the condition. An efficient diagnostic tool modeled as an iPhone application has the potential to save doctors time as well as mitigate user anxiety by providing them with immediate, accurate diagnosis. <strong>See more:</strong> <a href="https://devpost.com/software/medicus">Devpost</a>.</p>
+                            <p>Medicus is yet another mobile application my team and I developed at Hack UMASS! It harnesses image recognition to confidently diagnose various skin ailments given a picture of the condition. An efficient diagnostic tool modeled as an iPhone application has the potential to save doctors time as well as mitigate user anxiety by providing them with an immediate, accurate diagnosis. <strong>See more:</strong> <a href="https://devpost.com/software/medicus">Devpost</a>.</p>
                             <button type="button" class="btn btn-xl" data-dismiss="modal">Back <i class="fa fa-arrow-right"></i></button>
                         </div>
                     </div>
