--- a/static/less/bartola.less
+++ b/static/less/bartola.less
@@ -10,7 +10,7 @@ body {
 }
 
 .text-muted {
-	color: @gray;
+	color: @gray; 
 }
 
 .text-primary {
@@ -32,7 +32,7 @@ a:focus,
 a:active,
 a.active {
 	outline: none;
-}
+} 
 
 a {
 	color: @brand-primary;
@@ -53,18 +53,10 @@ h1, h2, h3, h4, h5, h6 {
 .img-centered {
 	margin: 0 auto;
 }
-/*
-.bg-light-gray {
-	background-color: @gray-lighter;
-}
 
-.bg-darkest-gray {
-	background-color: @brand-secondary;
-}
-*/
 // Restyled Primary Buttons
 
-.btn-primary {
+.btn-primary { 
 	.button-variant(white; @brand-primary; @brand-primary);
 	.heading-font;
 	font-weight: 700;
@@ -154,7 +146,7 @@ h1, h2, h3, h4, h5, h6 {
 			border-radius: 3px;
 		}
     }
-    .navbar-default.navbar-shrink {
+    .navbar-default.navbar-shrink { 
     	background-color: @brand-secondary;
         padding: 10px 0;
 		.navbar-brand {
@@ -164,9 +156,11 @@ h1, h2, h3, h4, h5, h6 {
 	}
 }
 
+
 header {
-	background: linear-gradient(to top, @brand-background, transparent 60%),
-				url('../img/header-bg.jpg') no-repeat center;
+	//background: url('../img/header-bg.jpg') no-repeat center;
+	background: url('../img/binarybackground.jpg') no-repeat center;
+	
 	.background-cover;
 	text-align: center;
 	color: white;
@@ -192,6 +186,7 @@ header {
 
 @media(min-width:768px) {
 	header {
+		background-attachment: fixed;
 		.intro-text {
 			padding-top: 300px;
 			padding-bottom: 200px;
@@ -211,6 +206,10 @@ header {
 			}
 		}
 	}
+
+	section {
+		padding: 150px 0;
+	}
 }
 
 // Global Section Styles
@@ -224,7 +223,7 @@ section {
     }
     h3.section-subheading {
 		font-size: 16px;
-		.serif-font;
+		.body-font;
 		text-transform: none;
 		font-style: italic;
 		font-weight: 400;
@@ -233,11 +232,99 @@ section {
 
 }
 
-@media(min-width:768px) {
-	section {
-		padding: 150px 0;
+// About Me Section
+
+// Flexbox layout
+#aboutparent {
+	display: flex;
+	flex-direction: column;
+}
+
+.about-pic {
+	flex: 1;
+
+	img {
+		border: 10px ridge @brand-primary;
+		box-shadow: 10px 10px 15px #222;
+		margin-bottom: 50px;
+		max-width: 70%;
+		margin-left: 15%;
+		margin-right: 15%;
 	}
 }
+
+.about-bio {
+	flex: 2;
+	p {
+		font-size: 1.6rem;
+		text-align: justify;
+		padding-left: 20px;
+		padding-right: 20px;
+	}
+}
+
+@media(min-width:768px) {
+    #aboutparent {
+    	flex-direction: row;
+    }
+
+	.about-pic {
+		img {
+			max-width: 100%;
+			margin-left: 0px;
+			margin-right: 0px;
+		}
+	
+	}
+
+	.about-bio {
+	    p {
+	        font-size: 1.9rem;
+	        margin-top: 56px;
+	        padding-left: 50px;
+	        padding-right: 50px;
+	    }
+	}
+
+}
+
+
+// Skills Section
+
+.about-skills {
+	perspective: 600px;
+}
+
+.skill {
+	.skill-icon {
+		z-index: 100;
+		backface-visibility: hidden;
+		transform-style: preserve-3d;
+		-webkit-transition: transform 400ms cubic-bezier(.54,-0.36,.77,1.71);
+		transition: transform 400ms cubic-bezier(.54,-0.36,.77,1.71);
+
+		&:hover {
+			//cursor: pointer;
+			//transform: rotate3d(0,1,0,180deg);
+			
+		}
+	}
+
+	&:hover {
+		cursor: pointer;
+	}
+
+	.skill-desc {
+		p {
+			text-align: justify;
+		}
+
+		//transform: rotate3d(0,1,0,180deg);
+	}
+
+}
+
+
 
 // Services Section
 
@@ -317,6 +404,11 @@ section {
     padding: 15%;
 }
 
+#medicus_pic {
+	height: 600px;
+	padding-left: 12%;
+} 
+
 @media(min-width:767px) {
     #portfolio {
         .portfolio-item {
@@ -326,28 +418,106 @@ section {
 }
 
 
-// Team Section
+// SkillSet Section
 
-#team {
+#skillset {
     background: linear-gradient(@brand-background, @brand-secondary);
 }
 
-.team-member {
-	text-align: center;
-	margin-bottom: 50px;
-	img {
-		margin: 0 auto;
-		border: 7px solid white;
-	}
-	h4 {
-		margin-top: 25px;
-		margin-bottom: 0;
-		text-transform: none;
-	}
-	p {
-		margin-top: 0;
-	}
+// Pie Chart
+
+
+// Let's initialize a flexbox layout for this section
+#pieparent {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
 }
+
+// Div with text descriptions of the languages within the pie chart
+#piediv {
+  flex: 2;
+  margin: 40px;
+}
+
+.chart {
+  width: 250px;
+  height: 250px;
+  svg {
+    width: inherit;
+    height: inherit;
+  }
+  
+  margin: 0 auto;
+  flex: 1;
+}
+
+// Flex media query
+@media(min-width:768px) {
+  #pieparent {
+    flex-wrap: nowrap;
+    flex-direction: row;
+  }
+
+  #piediv {
+    margin: 0px;
+  }
+
+  .chart {
+    width: 300px;
+    height: 300px;
+
+    svg {
+      width: inherit;
+      height: inherit;
+    }
+  }
+}
+
+.pieTip {
+  position: absolute;
+  float: left;
+  min-width: 30px;
+  max-width: 300px;
+  padding: 5px 18px 6px;
+  border-radius: 2px;
+  background: rgba(255,255,255,.97);
+  color: #444;
+  font-size: 19px;
+  text-shadow: 0 1px 0 #fff;
+  text-transform: uppercase;
+  text-align: center;
+  line-height: 1.3;
+  letter-spacing: .06em;
+  box-shadow: 0 0 3px rgba(0,0,0,0.2), 0 1px 2px rgba(0,0,0,0.5);
+  -webkit-transform: all .3s;
+     -moz-transform: all .3s;
+      -ms-transform: all .3s;
+       -o-transform: all .3s;
+          transform: all .3s;
+  pointer-events: none;
+}
+
+.pieTip:after {
+      position: absolute;
+      left: 50%;
+      bottom: -6px;
+      content: "";
+      height: 0;
+      margin: 0 0 0 -6px;
+      border-right: 5px solid transparent;
+      border-left: 5px solid transparent;
+      border-top: 6px solid rgba(255,255,255,.95);
+      line-height: 0;
+}
+.chart path { cursor: pointer; }
+
+//.pie {
+//  margin: 0 auto;
+//  width: 300px; height: 300px;
+//  border-radius: 50%;
+//  background: conic-gradient(#655 40%, yellowgreen 0);
+//}
 
 // Clients Aside
 
@@ -362,8 +532,10 @@ aside.clients {
 section#contact {
 	background-color: @brand-secondary;
 	background-image: url('../img/map-image.png');
+	//background-image: url('../img/binarybackground.jpg');
 	background-position: center;
 	background-repeat: no-repeat;
+	
 	.section-heading {
 		color: white;
 	}
@@ -401,13 +573,20 @@ section#contact {
 	   color: @placeholder-text;
 	}
 	:-ms-input-placeholder {  
-	   .heading-font;
+	   .heading-font; 
 	   font-weight: 700;
 	   color: @placeholder-text;
 	}
 	.text-danger {
 		color: @brand-danger;
 	}
+}
+
+@media(min-width:768px) {
+	section#contact {
+		background-attachment: fixed;
+	}
+
 }
 
 // Footer
@@ -559,48 +738,117 @@ body {
     webkit-tap-highlight-color: @brand-primary;
 }
 
-// About Me Section
 
-.about-pic {
-	img {
-		border: 10px ridge @brand-primary;
-		box-shadow: 20px 20px 15px #888;
-		margin-bottom: 50px;
+// Mailbox
+
+.inbox {
+	border-left: 15px solid @brand-secondary;
+	border-right: 15px solid @brand-secondary;
+
+	& .row {
+		padding-top: 15px;
 	}
-	
 }
 
-@media(max-width:1200px) {
-	.about-pic {
-		img {
-			max-width: 50%;
-			margin-left: 25%;
-			margin-right: 25%;
+.flex {
+	display: flex;
+}
+
+.table-holder {
+	overflow-y: auto;
+	padding: 20px 20px;
+	height: 500px;
+
+	table {
+		thead {
+			tr {
+				th {
+					&:hover {
+						cursor: pointer;
+						background-color: darken(@brand-background, 5%);
+					}
+				}
+			
+			}
 		}
-	
-	}
 
-}
-
-.about-bio {
-	p {
-		font-size: 2rem;
-		text-align: justify;
-		padding-left: 50px;
-		padding-right: 50px;
-	}
-	
-}
-
-// Skills Section
-
-.about-skills {
-	div {
-		&:hover {
-			cursor: pointer;
-			border-radius: 10%;
-			box-shadow: 20px 20px 50px #888;
-			-webkit-transition: all ease 0.7s;
+		tbody {
+			tr {
+				&:hover {
+					cursor: pointer;
+					background-color: darken(@brand-background, 5%);
+				}
+			}
+			
 		}
+		
 	}
+}
+
+.caret-upside {
+	transform: rotate(180deg);
+}
+
+#removemsg {
+	
+	&:hover {
+		border-color: darkred;
+		background-color: darkred;
+	}
+}
+
+
+
+// Tutoring
+
+
+.tab-group {
+	margin: 0 auto;
+	max-width: 40em;
+	width: 100%;
+} 
+
+.tab {
+	position: relative;
+	width: 100%;
+}
+
+.tab input {
+	transform: translate(15px, 15px);
+	position: absolute;
+	left: 0;
+	top: 0;
+	z-index: -999;
+}
+
+.tab label {
+	background: @brand-secondary;
+	border-radius: 2px;
+	color: #fff;
+	display: block;
+	font-weight: bold;
+	line-height: 3;
+	padding-left: 0.5em;
+	margin-bottom: 0.5em;
+	transition: letter-spacing 0.55s;
+}
+
+.tab input:focus + label,
+.tab label:hover {
+	background: @brand-primary;
+	letter-spacing: 1px;
+}
+
+.tab-content {
+	max-height: 0;
+	overflow: hidden;
+	transition: all 0.35s;
+}
+
+.tab-content p {
+	margin: 1em 0;
+}
+
+.tab input:checked ~ .tab-content {
+	max-height: 9em;
 }
