--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,6 +9,8 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
+    <link rel="shortcut icon" href="static/img/favicon.ico" type="image/x-icon">
+
     <title>{% block title %}Jesse Bartola{% endblock %}</title>
 
     <!-- Ubuntu Font CSS -->
@@ -23,12 +25,13 @@
     <!-- Slick CSS -->
     <link href="static/css/slick.css" rel="stylesheet">
     <link href="static/css/slick-theme.css" rel="stylesheet">
-    
+    <!-- PickMeUp CSS -->
+    <link href="static/css/pickmeup.css" rel="stylesheet">
     <!-- SweetAlert CSS -->
     <link href="static/css/sweetalert.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="static/css/agency.css" rel="stylesheet">
+    <link href="static/css/bartola.css" rel="stylesheet">
 
 
 
@@ -40,25 +43,22 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
 
-
-    <!-- Parse JS -->
-    <!-- <script src="//www.parsecdn.com/js/parse-1.6.14.min.js"></script> -->
-
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <!-- <script>
+    <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-72248183-1', 'auto');
+  ga('create', 'UA-72248183-2', 'auto');
   ga('send', 'pageview');
-	</script> -->
+
+    </script>
 
 </head>
 
