--- a/www/static/templates/index.html
+++ b/www/static/templates/index.html
@@ -30,12 +30,17 @@
     <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+
 </head>
 
 <body id="body">
   <div id="app">
       <!-- React app entry point -->
   </div>
+
+  <!-- Bootstrap bundle  -->
+  <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
 
   <!-- React app bundle  -->
   <script src="{{ url_for('static', filename='build/bundle.js') }}"></script>
