--- a/www/static/css/bartola.css
+++ b/www/static/css/bartola.css
@@ -21,6 +21,7 @@ a {
 
 a:hover {
     color: inherit;
+    text-decoration: none;
 }
 
 .flex {
@@ -244,6 +245,43 @@ a:hover {
     background-color: #00d4d4;
 }
 
+#portfolio {
+    max-height: 604px;
+    min-height: 604px;
+    overflow-y: auto;
+}
+
+.portfolio-left {
+    padding-right: 0;
+}
+
+.portfolio-right {
+    padding-left: 0;
+}
+
+.portfolio-cell-outer {
+    background-size: cover;
+    text-align: center;
+    width: 100%;
+    height: 300px;
+}
+
+.portfolio-cell {
+    height: 100%;
+    padding: 15%;
+    opacity: 0;
+    background-color: #e6e6e6;
+}
+
+.portfolio-cell:hover {
+    opacity: 0.7;
+    transition: all 0.3s;
+}
+
+.portfolio-title {
+    margin-bottom: 25px;
+}
+
 
 @media (max-width: 991px) {
     nav {
@@ -260,5 +298,25 @@ a:hover {
 
     .company-logo, .school-logo, .event-logo {
         margin-bottom: 30px;
+    }
+
+    #resume {
+        max-height: initial;
+        min-height: initial;
+        overflow-y: initial;
+    }
+
+    #portfolio {
+        max-height: initial;
+        min-height: initial;
+        overflow-y: initial;
+    }
+
+    .portfolio-left {
+        padding-right: 15px;
+    }
+
+    .portfolio-right {
+        padding-left: 15px;
     }
 }
