--- a/www/static/css/bartola.css
+++ b/www/static/css/bartola.css
@@ -292,6 +292,10 @@ a:hover {
         display: none;
     }
 
+    .bio {
+        font-size: 1em;
+    }
+
     .carousel-container {
         margin-left: 15px;
     }
