--- a/www/static/css/bartola.css
+++ b/www/static/css/bartola.css
@@ -284,13 +284,6 @@ a:hover {
 
 
 @media (max-width: 991px) {
-    nav {
-        display: none !important;
-    }
-
-    .nav-item-cover {
-        display: none;
-    }
 
     .bio {
         font-size: 1em;
@@ -323,4 +316,15 @@ a:hover {
     .portfolio-right {
         padding-left: 15px;
     }
+}
+
+@media (max-width: 767px) {
+    nav {
+        display: none !important;
+    }
+
+    .nav-item-cover {
+        display: none;
+    }
+
 }
