Adjust carousel height for larger screens

--- a/www/static/less/bartola.less
+++ b/www/static/less/bartola.less
@@ -180,8 +180,8 @@ nav {
 // Resume
 
 #resume {
-  max-height: 604px;
-  min-height: 604px;
+  max-height: 80vh;
+  min-height: 80vh;
   overflow-y: auto;
 
   @media @small-desktop-down {
@@ -275,8 +275,8 @@ nav {
 
 
 #portfolio {
-  max-height: 604px;
-  min-height: 604px;
+  max-height: 80vh;
+  min-height: 80vh;
   overflow-y: auto;
 
   @media @tablet-down {
