--- a/www/static/css/bartola.css
+++ b/www/static/css/bartola.css
@@ -166,8 +166,8 @@ a:hover {
   }
 }
 #resume {
-  max-height: 604px;
-  min-height: 604px;
+  max-height: 80vh;
+  min-height: 80vh;
   overflow-y: auto;
 }
 @media (max-width: 991px) {
@@ -260,8 +260,8 @@ a:hover {
   background-color: #00d4d4;
 }
 #portfolio {
-  max-height: 604px;
-  min-height: 604px;
+  max-height: 80vh;
+  min-height: 80vh;
   overflow-y: auto;
 }
 @media (max-width: 767px) {
